<resources>
    <string name="app_name">diaeasy</string>
    <string name="action_settings">Settings</string>
    <string name="action_showdata">Historie anzeigen</string>

    <string name="Ergebnis">Ergebnis</string>
    <string name="Kohlenhydrate">Kohlenhydrate</string>
    <string name="KEs">KEs</string>
    <string name="Blutzucker">Blutzucker</string>

    <string name="KE_Faktor">KE Faktor</string>
    <string name="Einheiten">Einheiten</string>
    <string name="Bolus">Bolus</string>
    <string name="Basalrate">Basalrate</string>
    <string name="Korrekturfaktor">Korrekturfaktor</string>
    <string name="Zielwert">Zielwert</string>
    <string name="title_activity_settings">Settings</string>

    <string name="Calc_Infotext">Kohlenhydrate pro 100g, die gegessene Menge (Gramm) und optional die Zutat eingeben.</string>

    <!-- Strings to setdata -->
    <string name="newrow">Neue Zeile</string>

    <string name="editText_errorMessage">Daten nicht korrekt.</string>


    <string name="cab_delete">Einträge löschen</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
