<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_blutzucker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >


            <EditText
                android:id="@+id/et_blutzucker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLength="3"
                android:hint="@string/Blutzucker"
                android:inputType="number"
                android:textSize="30sp" />

        </android.support.design.widget.TextInputLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_KEs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingBottom="0dp"
            android:layout_weight=".70"
            >

            <EditText
                android:id="@+id/et_inputKEs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:maxLength="4"
                android:hint="@string/KEs"
                android:inputType="numberDecimal"
                android:textSize="30sp" />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_khcalculator"
            android:layout_width="80px"
            android:layout_height="80px"
            android:background="@drawable/rechner" />


</LinearLayout>

            <TextView
                android:id="@+id/tv_KH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="10sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">


                <TextView
                    android:id="@+id/tv_KEFaktor_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#DCDCDC"
                    android:text="@string/KE_Faktor"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/tv_currentKEFaktor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#DCDCDC"
                    android:textAlignment="center"
                    android:hint="@string/KE_Faktor"
                    android:textSize="15sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_ergebnis_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Bolus"
                android:background="#DCDCDC"
                android:textStyle="bold"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_ergebnis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#DCDCDC"
                android:inputType="numberDecimal"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingRight="15dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <TextView
                android:id="@+id/tv_BolusInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_snack"
            android:text="Snack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rb_haupt"
            android:text="Hauptmahlzeit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"/>
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_notiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/et_notiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:hint="Notizen"
            />

    </android.support.design.widget.TextInputLayout>
<!--
    <ListView
    android:id="@+id/lv_historie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="3dp"
        >
    </ListView>-->

</LinearLayout>